# mypy-nested-sequence-issue

./: README.md  pyproject.toml  setup.cfg
src/mypy_nested_sequence/: __init__.py  issue.py  protocol.py
